--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:background="@android:color/darker_gray"
+        android:ems="10"
+        android:hint="Nota 1"
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:background="@android:color/darker_gray"
+        android:ems="10"
+        android:hint="Nota 2"
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:background="@android:color/darker_gray"
+        android:ems="10"
+        android:hint="Faltas"
+        android:inputType="textPersonName"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!-- 05/03/2021 TODO OK: 1 - Apagando editText -->
+<!-- 05/03/2021 TODO OK:  2 - selecionando text/Plain Text para inputs -->
+<!-- 05/03/2021 TODO OK:  3 - Selecione o Plain Text, vá em attributes e digite em hint "Nota 1" -->
+<!-- 05/03/2021 TODO OK:  4 - Apague o campo android.text do editText-->
+<!-- 05/03/2021 TODO OK:  5 - Mude o fundo para cinze em attributes / background -->
+<!-- 05/03/2021 TODO OK:  6 - Adicione uma padding de 20dp no plain Text -->
+<!-- 05/03/2021 TODO OK:  7 - Copie o código do editText e crie mais dois campo e renomei o hint para Nota 2 e Faltas respectivamente e renomei o id-->
+<!-- 05/03/2021 TODO:  8 - Alinhe o constrant layout amarrando os elementos conforme hierarquia -->
